--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "assignment",
+  "name": "data-store",
   "version": "1.0.0",
   "description": "data-store-assignment",
   "main": "usage.js",
   "scripts": {
-    "start": "del db.json && node usage.js",
+    "start": "del db.json && node client.js",
     "test": ""
   },
   "author": "dinesh babu",
