update main field

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "data-store",
   "version": "1.0.0",
   "description": "data-store-assignment",
-  "main": "usage.js",
+  "main": "src/dataStore.js",
   "scripts": {
-    "start": "del db.json && node client.js",
+    "start": "node client.js",
     "test": "mocha"
   },
   "author": "dinesh babu",
